--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,10 @@
     "start": "craco start",
     "build": "craco build",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx"
+    "lint": "eslint src --ext .ts,.tsx",
+    "electron": "electron .",
+    "electron:dev": "electron . dev",
+    "electron:build": "electron-builder"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +51,60 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "name": "web-workshop",
+  "version": "2024.0.0",
+  "main": "build/electron.js",
+  "build": {
+    "productName": "EESAST Web Workshop",
+    "appId": "web-workshop",
+    "icon": "build/logo.png",
+    "directories": {
+      "output": "electron"
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ]
+    },
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ]
+    },
+    "linux": {
+      "maintainer": "EESAST",
+      "target": [
+        "AppImage",
+        "deb",
+        "rpm",
+        "tar.gz"
+      ]
+    },
+    "nsis": {
+      "shortcutName": "EESAST",
+      "oneClick": false,
+      "perMachine": true,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    },
+    "dmg": {
+      "contents": [
+        {
+          "x": 0,
+          "y": 0,
+          "path": "/Application"
+        }
+      ]
+    },
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
     ]
   }
 }
