update about-me.html about-me.js and index.css

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "react-router-dom": "6.26.1"
   },
   "devDependencies": {
-    "@craco/craco": "7.1.0",
+    "@craco/craco": "^7.1.0",
     "@types/md5": "2.3.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
