--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
-REACT_APP_BACKEND_URL=https://workshop.eesast.com
-REACT_APP_HASURA_HTTPLINK=https://workshop.eesast.com/v1/graphql
-REACT_APP_HASURA_WSLINK=wss://workshop.eesast.com/v1/graphql
+REACT_APP_BACKEND_URL=http://localhost:8888
+REACT_APP_HASURA_HTTPLINK=https://webdev1.hasura.app/v1/graphql
+REACT_APP_HASURA_WSLINK=wss://webdev1.hasura.app/v1/graphql
+TZ='UTC'
